<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <ImageButton
        android:id="@+id/btnRock"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:contentDescription="TODO"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btnPaper"
        app:layout_constraintEnd_toStartOf="@+id/btnPaper"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPaper"
        app:srcCompat="@drawable/rock" />

    <ImageButton
        android:id="@+id/btnPaper"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnScissors"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnRock"
        app:srcCompat="@drawable/paper" />

    <ImageButton
        android:id="@+id/btnScissors"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/btnPaper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPaper"
        app:layout_constraintTop_toTopOf="@+id/btnPaper"
        app:srcCompat="@drawable/scissors" />

    <TextView
        android:id="@+id/tvStatisticsIntro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_all_time_statistics"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/win_draw_loss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatisticsIntro" />

    <TextView
        android:id="@+id/tvWinLoseText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/you_win"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

    <TextView
        android:id="@+id/tvVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="264dp"
        android:text="@string/v_s"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintEnd_toStartOf="@+id/ivPlayerPick"
        app:layout_constraintStart_toEndOf="@+id/ivComputerPick"
        app:layout_constraintTop_toBottomOf="@+id/tvWinLoseText" />

    <ImageView
        android:id="@+id/ivComputerPick"
        android:layout_width="91dp"
        android:layout_height="89dp"
        android:layout_marginStart="64dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tvVS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvVS"
        app:srcCompat="@drawable/rock" />

    <ImageView
        android:id="@+id/ivPlayerPick"
        android:layout_width="91dp"
        android:layout_height="89dp"
        android:layout_marginEnd="64dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/tvVS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvVS"
        app:srcCompat="@drawable/paper" />

    <TextView
        android:id="@+id/tvComputerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@+id/ivComputerPick"
        app:layout_constraintStart_toStartOf="@+id/ivComputerPick"
        app:layout_constraintTop_toBottomOf="@+id/ivComputerPick" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@+id/ivPlayerPick"
        app:layout_constraintStart_toStartOf="@+id/ivPlayerPick"
        app:layout_constraintTop_toBottomOf="@+id/ivPlayerPick" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="10dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

</androidx.constraintlayout.widget.ConstraintLayout>